--- a/08-دستورات کنترل جریان.md
+++ b/08-دستورات کنترل جریان.md
@@ -1,1 +1,211 @@
-07
+<div dir=rtl>
+
+
+
+|
+<a href="07-ساختارهای داده داخلی.md">ساختارهای داده داخلی</a>
+|
+<a href="00-فهرست.md">فهرست</a>
+|
+<a href="09-تعریف توابع.md">تعریف توابع</a>
+|
+
+
+<h1>کنترل جریان</h1>
+
+
+<p>کنترل جریان جایی است که برنامه‌نویسی واقعاً معنای عملی پیدا می‌کند. بدون آن، یک برنامه فقط فهرستی از دستورهاست که به‌صورت پشت‌سرهم اجرا می‌شوند. با استفاده از کنترل جریان، می‌توانید بلوک‌های مشخصی از کد را به‌صورت شرطی و/یا تکرارشونده اجرا کنید؛ این اجزای بنیادی را می‌توان ترکیب کرد و برنامه‌هایی ساخت که به‌طرز شگفت‌انگیزی پیچیده و قدرتمند هستند!</p>
+
+
+<p>در این بخش، عبارات شرطی (از جمله if، elif و else) و عبارات حلقه (از جمله for و while به‌همراه دستورهای break، continue و pass) را پوشش می‌دهیم.</p>
+
+
+<h2>عبارات شرطی: if-elif-else</h2>
+
+
+<p>عبارات شرطی که اغلب با عنوان دستورهای if-then شناخته می‌شوند، به برنامه‌نویس امکان می‌دهند بخش‌های خاصی از کد را بسته به یک شرط بولی اجرا کند. یک مثال ساده از یک عبارت شرطی پایتون این است:</p>
+
+
+<pre dir=ltr>
+<font color=white>
+x = -15
+
+if x == 0:
+    print(x, "is zero")
+elif x > 0:
+    print(x, "is positive")
+elif x < 0:
+    print(x, "is negative")
+else:
+    print(x, "is unlike anything I've ever seen...")
+</pre>
+<p dir=ltr>-15 is negative</p>
+
+
+<p>به‌ویژه به استفاده از دو نقطه (:) و فاصله‌گذاری (indentation) برای مشخص‌کردن بلوک‌های جداگانهٔ کد توجه کنید.</p>
+
+
+<p>پایتون از کلیدواژه‌های if و else که در بسیاری از زبان‌های دیگر نیز استفاده می‌شوند پیروی می‌کند؛ اما کلیدواژهٔ منحصربه‌فردتر آن elif است که شکل کوتاه‌شدهٔ «else if» محسوب می‌شود. در این ساختارهای شرطی، بلوک‌های elif و else اختیاری هستند؛ علاوه‌براین، می‌توانید هر تعداد elif که بخواهید—کم یا زیاد—در کد خود قرار دهید.</p>
+
+
+<h2>حلقه‌های for</h2>
+
+
+<p>حلقه‌ها در پایتون روشی برای اجرای مکرر یک یا چند دستور کد هستند. بنابراین، به‌عنوان مثال، اگر بخواهیم هر یک از آیتم‌های یک لیست را چاپ کنیم، می‌توانیم از یک حلقه for استفاده کنیم:</p>
+
+
+<pre dir=ltr>
+<font color=white>
+for N in [2, 3, 5, 7]:
+    print(N, end=' ') # print all on same line
+</pre>
+<p dir=ltr>2 3 5 7</p>
+
+
+<p>به سادگی حلقه for توجه کنید: ما متغیری را که می‌خواهیم استفاده کنیم، دنباله‌ای که می‌خواهیم روی آن حلقه بزنیم مشخص می‌کنیم و با استفاده از عملگر in آن‌ها را به‌صورت شهودی و قابل‌خواندن به هم مرتبط می‌کنیم. دقیق‌تر بگوییم، شیء سمت راست in می‌تواند هر تکرارشونده (iterator) پایتون باشد. یک تکرارشونده را می‌توان به‌عنوان یک دنبالهٔ تعمیم‌یافته در نظر گرفت، و در بخش «تکرارشونده‌ها» (Iterators) به آن‌ها خواهیم پرداخت.</p>
+
+
+<p>به‌عنوان مثال، یکی از پرکاربردترین تکرارشونده‌ها در پایتون، شیء range است که یک دنباله از اعداد تولید می‌کند:</p>
+
+
+<pre dir=ltr>
+<font color=white>
+for i in range(10):
+    print(i, end=' ')
+</pre>
+<p dir=ltr>0 1 2 3 4 5 6 7 8 9</p>
+
+
+<p>توجه کنید که range به‌صورت پیش‌فرض از صفر شروع می‌شود و طبق قرارداد، مقدار بالای محدوده در خروجی لحاظ نمی‌شود. اشیاء range می‌توانند مقادیر پیچیده‌تری نیز داشته باشند:</p>
+
+
+<pre dir=ltr>
+<font color=white>
+# range from 5 to 10
+list(range(5, 10))
+</pre>
+<p dir=ltr>[5, 6, 7, 8, 9]</p>
+
+
+<pre dir=ltr>
+<font color=white>
+# range from 0 to 10 by 2
+list(range(0, 10, 2))
+</pre>
+<p dir=ltr>[0, 2, 4, 6, 8]</p>
+
+
+<p>ممکن است متوجه شوید که معنای آرگومان‌های range بسیار شبیه نحوۀ برش (slicing) است که قبلاً در بخش لیست‌ها بررسی کردیم.</p>
+
+
+<p>توجه کنید که رفتار <span dir=ltr>range()</span> یکی از تفاوت‌های بین پایتون ۲ و پایتون ۳ است: در پایتون ۲، <span dir=ltr>range()</span> یک لیست تولید می‌کند، در حالی که در پایتون ۳، <span dir=ltr>range()</span> یک شیء قابل تکرار (iterable) ایجاد می‌کند.</p>
+
+
+<h2>حلقه‌های while</h2>
+
+
+<p>نوع دیگر حلقه‌ها در پایتون، حلقه while است که تا زمانی که یک شرط خاص برقرار باشد، تکرار می‌شود:</p>
+
+
+<pre dir=ltr>
+<font color=white>
+i = 0
+while i < 10:
+    print(i, end=' ')
+    i += 1
+</pre>
+<p dir=ltr>0 1 2 3 4 5 6 7 8 9</p>
+
+
+<p>آرگومان حلقه while به‌صورت یک عبارت بولی ارزیابی می‌شود و حلقه تا زمانی که این عبارت False شود، اجرا می‌گردد.</p>
+
+
+<h2>break و continue: تنظیم دقیق‌تر حلقه‌هایتان</h2>
+
+
+<p>دو دستور مفید وجود دارند که می‌توان درون حلقه‌ها از آن‌ها برای تنظیم دقیق نحوهٔ اجرای حلقه‌ها استفاده کرد:</p>
+
+
+<li>دستور break به‌طور کامل از حلقه خارج می‌شود.</li>
+<li>دستور continue باقی‌ماندهٔ اجرای حلقهٔ جاری را نادیده می‌گیرد و به تکرار بعدی حلقه می‌رود.</li>
+
+
+<p>این دستورات می‌توانند هم در حلقه‌های for و هم در حلقه‌های while استفاده شوند.</p>
+
+
+<p>در اینجا یک مثال از استفادهٔ continue برای چاپ رشته‌ای از اعداد فرد آورده شده است. در این مورد، نتیجه می‌توانست به‌خوبی با یک دستور if-else نیز حاصل شود، اما گاهی دستور continue راهی راحت‌تر برای بیان ایده‌ای است که در ذهن دارید:</p>
+
+
+<pre dir=ltr>
+<font color=white>
+for n in range(20):
+    # if the remainder of n / 2 is 0, skip the rest of the loop
+    if n % 2 == 0:
+        continue
+    print(n, end=' ')
+</pre>
+<p dir=ltr>1 3 5 7 9 11 13 15 17 19</p>
+
+
+<p>در اینجا یک مثال از استفادهٔ دستور break برای یک کار کمی پیچیده‌تر آورده شده است. این حلقه یک لیست را با تمام اعداد فیبوناچی تا یک مقدار مشخص پر می‌کند:</p>
+
+
+<pre dir=ltr>
+<font color=white>
+a, b = 0, 1
+amax = 100
+L = []
+
+while True:
+    (a, b) = (b, a + b)
+    if a > amax:
+        break
+    L.append(a)
+
+print(L)
+</pre>
+<p dir=ltr>[1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89]</p>
+
+
+<p>توجه کنید که از حلقه while True استفاده کرده‌ایم، که تا بی‌نهایت ادامه خواهد داشت مگر اینکه یک دستور break در حلقه وجود داشته باشد!</p>
+
+
+<h2>حلقه‌ها با بلوک else</h2>
+
+
+<p>یکی از الگوهای کمتر استفاده‌شده در پایتون، استفاده از دستور else به‌عنوان بخشی از یک حلقه for یا while است. پیش‌تر دربارهٔ بلوک else صحبت کردیم: این بلوک اجرا می‌شود اگر تمام عبارات if و elif ارزیابی‌شده False باشند. حلقه با else شاید یکی از نام‌گذاری‌های گیج‌کننده در پایتون باشد؛ من ترجیح می‌دهم آن را به‌عنوان یک دستور «بدون break» در نظر بگیرم: یعنی بلوک else تنها در صورتی اجرا می‌شود که حلقه به‌طور طبیعی پایان یابد و با دستور break مواجه نشود.</p>
+
+
+<p>به‌عنوان مثال برای جایی که این ویژگی می‌تواند مفید باشد، پیاده‌سازی زیر (غیر بهینه) از الگوریتم معروف غربال اراتوستن را در نظر بگیرید، که برای یافتن اعداد اول استفاده می‌شود:</p>
+
+
+<pre dir=ltr>
+<font color=white>
+L = []
+nmax = 30
+
+for n in range(2, nmax):
+    for factor in L:
+        if n % factor == 0:
+            break
+    else: # no break
+        L.append(n)
+print(L)
+</pre>
+<p dir=ltr>[2, 3, 5, 7, 11, 13, 17, 19, 23, 29]</p>
+
+
+<p>دستور else تنها زمانی اجرا می‌شود که هیچ‌یک از عوامل عدد مورد نظر را تقسیم نکنند. دستور else در حلقه‌های while نیز به همین شکل عمل می‌کند.</p>
+
+
+|
+<a href="07-ساختارهای داده داخلی.md">ساختارهای داده داخلی</a>
+|
+<a href="00-فهرست.md">فهرست</a>
+|
+<a href="09-تعریف توابع.md">تعریف توابع</a>
+|
+
+
+
+</div>
